--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <header class="header">
     <img src="img/logo.png" class="logo" alt="logo">
     <ul class="nav">
-        <li class="nav__item"><a href="#">Home</a></li>
-        <li class="nav__item"><a href="#">About</a></li>
-        <li class="nav__item"><a href="#">Tech Stack</a></li>
-        <li class="nav__item"><a href="#">Projects</a></li>
-        <li class="nav__item--contact"><a href="#">Contact</a></li>
+        <li class="nav__item"><a class="link-style" href="#">Home</a></li>
+        <li class="nav__item"><a class="link-style" href="#">About</a></li>
+        <li class="nav__item"><a class="link-style" href="#">Tech Stack</a></li>
+        <li class="nav__item"><a class="link-style" href="#">Projects</a></li>
+        <li class="nav__item--contact"><a  class="link-style" href="#">Contact</a></li>
         <li class="nav__item--social">
             <img src="img/svg/github-gray.svg" alt="github">
             <img src="img/svg/twitter_gray.svg" alt="twitter">
@@ -63,8 +63,8 @@
                 <p class="project__details">This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content</p>
                 <p class="project__tech-stack">Tech stack : <span class="project__technologies">HTML , JavaScript, SASS, React</span></p>
                 <p class="project__links">
-                    <span class="project-link__chain"><img src="img/svg/akar-icons_link-chain.svg" class="project__link--live" alt="chain"><a href="">Live Preview</a></span>
-                    <span class="project-link__git "><img src="img/svg/akar-icons_github-fill_small.svg" class="project__link--code" alt="git"><a href="">View Code</a></span></p>
+                    <span class="project-link__chain "><img src="img/svg/akar-icons_link-chain.svg" class="project__link--live" alt="chain"><a class="link-style" href="">Live Preview</a></span>
+                    <span class="project-link__git "><img src="img/svg/akar-icons_github-fill_small.svg" class="project__link--code" alt="git"><a class="link-style" href="">View Code</a></span></p>
             </div>
             <div>
                 <img src="img/img2.png" alt="logo">
@@ -72,8 +72,8 @@
                 <p class="project__details">This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content</p>
                 <p class="project__tech-stack">Tech stack : <span class="project__technologies">HTML , JavaScript, SASS, React</span></p>
                 <p class="project__links">
-                    <span class="project-link__chain"><img src="img/svg/akar-icons_link-chain.svg" class="project__link--live" alt="chain"><a href="">Live Preview</a></span>
-                    <span class="project-link__git"><img src="img/svg/akar-icons_github-fill_small.svg" class="project__link--code" alt="git"><a href="">View Code</a></span></p>
+                    <span class="project-link__chain"><img src="img/svg/akar-icons_link-chain.svg" class="project__link--live" alt="chain"><a class="link-style" href="">Live Preview</a></span>
+                    <span class="project-link__git"><img src="img/svg/akar-icons_github-fill_small.svg" class="project__link--code" alt="git"><a class="link-style" href="">View Code</a></span></p>
             </div>
             <div>
                 <img src="img/img3.png" alt="logo">
@@ -81,8 +81,8 @@
                 <p class="project__details">This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content</p>
                 <p class="project__tech-stack">Tech stack : <span class="project__technologies">HTML , JavaScript, SASS, React</span></p>
                 <p class="project__links">
-                    <span class="project-link__chain"><img src="img/svg/akar-icons_link-chain.svg" class="project__link--live" alt="chain"><a href="">Live Preview</a></span>
-                    <span class="project-link__git"><img src="img/svg/akar-icons_github-fill_small.svg" class="project__link--code" alt="git"><a href="">View Code</a></span></p>
+                    <span class="project-link__chain"><img src="img/svg/akar-icons_link-chain.svg" class="project__link--live" alt="chain"><a class="link-style" href="">Live Preview</a></span>
+                    <span class="project-link__git"><img src="img/svg/akar-icons_github-fill_small.svg" class="project__link--code" alt="git"><a class="link-style" href="">View Code</a></span></p>
             </div>
             <div>
                 <img src="img/img4.png" alt="logo">
@@ -90,8 +90,8 @@
                 <p class="project__details">This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content</p>
                 <p class="project__tech-stack">Tech stack : <span class="project__technologies">HTML , JavaScript, SASS, React</span></p>
                 <p class="project__links">
-                    <span class="project-link__chain"><img src="img/svg/akar-icons_link-chain.svg" class="project__link--live" alt="chain"><a href="">Live Preview</a></span>
-                    <span class="project-link__git"><img src="img/svg/akar-icons_github-fill_small.svg" class="project__link--code" alt="git"><a href="">View Code</a></span></p>
+                    <span class="project-link__chain"><img src="img/svg/akar-icons_link-chain.svg" class="project__link--live" alt="chain"><a class="link-style" href="">Live Preview</a></span>
+                    <span class="project-link__git"><img src="img/svg/akar-icons_github-fill_small.svg" class="project__link--code" alt="git"><a class="link-style" href="">View Code</a></span></p>
             </div>
             <div>
                 <img src="img/img5.png" alt="logo">
@@ -99,8 +99,8 @@
                 <p class="project__details">This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content</p>
                 <p class="project__tech-stack">Tech stack : <span class="project__technologies">HTML , JavaScript, SASS, React</span></p>
                 <p class="project__links">
-                    <span class="project-link__chain"><img src="img/svg/akar-icons_link-chain.svg" class="project__link--live" alt="chain"><a href="">Live Preview</a></span>
-                    <span class="project-link__git"><img src="img/svg/akar-icons_github-fill_small.svg" class="project__link--code" alt="git"><a href="">View Code</a></span></p>
+                    <span class="project-link__chain"><img src="img/svg/akar-icons_link-chain.svg" class="project__link--live" alt="chain"><a class="link-style" href="">Live Preview</a></span>
+                    <span class="project-link__git"><img src="img/svg/akar-icons_github-fill_small.svg" class="project__link--code" alt="git"><a class="link-style" href="">View Code</a></span></p>
             </div>
             <div>
                 <img src="img/img6.png" alt="logo">
@@ -108,8 +108,8 @@
                 <p class="project__details">This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content</p>
                 <p class="project__tech-stack">Tech stack : <span class="project__technologies">HTML , JavaScript, SASS, React</span></p>
                 <p class="project__links">
-                    <span class="project-link__chain"><img src="img/svg/akar-icons_link-chain.svg" class="project__link--live" alt="chain"><a href="">Live Preview</a></span>
-                    <span class="project-link__git"><img src="img/svg/akar-icons_github-fill_small.svg" class="project__link--code" alt="git"><a href="">View Code</a></span></p>
+                    <span class="project-link__chain"><img src="img/svg/akar-icons_link-chain.svg" class="project__link--live" alt="chain"><a class="link-style" href="">Live Preview</a></span>
+                    <span class="project-link__git"><img src="img/svg/akar-icons_github-fill_small.svg" class="project__link--code" alt="git"><a  class="link-style" href="">View Code</a></span></p>
             </div>
         </div>
     </section>
@@ -118,8 +118,8 @@
 <footer class="footer">
     <img src="img/logo1.png" alt="logo">
     <div class="footer__contacts">
-        <a href="tel:+911234509876" class="footer__phone">+91 12345 09876</a>
-        <a href="mailto:info@example.com" class="footer__email">info@example.com</a>
+        <a href="tel:+911234509876" class="footer__phone link-style">+91 12345 09876</a>
+        <a href="mailto:info@example.com" class="footer__email link-style">info@example.com</a>
         <p class="footer__social-icons">
             <img src="img/svg/akar-icons_github-fill_dark.svg" alt="github">
             <img src="img/svg/ant-design_twitter-circle-dark.svg" alt="twitter">
@@ -128,11 +128,11 @@
     </div>
     <div class="footer__bottom">
         <ul class="footer__menu">
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href=" ">Technologies</a></li>
-            <li><a href="">Projects</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a class="link-style" href="">Home</a></li>
+            <li><a class="link-style" href="">About</a></li>
+            <li><a class="link-style" href=" ">Technologies</a></li>
+            <li><a class="link-style" href="">Projects</a></li>
+            <li><a class="link-style" href="">Contact</a></li>
         </ul>
         <p class="footer__credits">Designed and built by <span class="footer__author">Pavan MG</span> with <span class="footer__love">Love</span> & <span class="footer__coffee">Coffee</span></p>
     </div>
